fix(property.scss)hide imageIndex on mobile

--- a/src/styles/Property.scss
+++ b/src/styles/Property.scss
@@ -39,6 +39,9 @@
     position: absolute;
     top: 80%;
     left: 50%;
+    @media screen and (max-width: 600px) {
+        visibility: hidden;
+    }
 }
 
 h1 , h2 {
